update DVC course name and submission format

--- a/lab/lab01/lab01DVC.ipynb
+++ b/lab/lab01/lab01DVC.ipynb
@@ -143,7 +143,7 @@
     "    then the whole 🌏,\n",
     "    and then this one.\n",
     "\n",
-    "*Hint:* If you're stuck on the Earth symbol for more than a few minutes, try talking to a neighbor or a staff member. That's a good idea for any lab problem."
+    "*Hint:* If you're stuck on the Earth symbol for more than a few minutes, try talking to your peer and a classmate, or the professor. That's a good idea for any lab problem."
    ]
   },
   {
@@ -1110,8 +1110,8 @@
     "**Important submission steps:** \n",
     "1. Run the tests and verify that they all pass.\n",
     "2. Choose **Save Notebook** from the **File** menu, then **run the final cell**. \n",
-    "3. Click the link to download the zip file.\n",
-    "4. Then submit the zip file to the corresponding assignment according to your instructor's directions. \n",
+    "3. Choose **PDF via LaTeX(.pdf)** at **Download as** from the **File** menu. \n",
+    "4. Then submit the PDF file to the corresponding assignment according to your instructor's directions. \n",
     "\n",
     "**It is your responsibility to make sure your work is saved before running the last cell.**\n",
     "\n",
