--- a/lab/lab01/lab01.ipynb
+++ b/lab/lab01/lab01.ipynb
@@ -26,7 +26,7 @@
    "source": [
     "# Lab 1: Expressions\n",
     "\n",
-    "Welcome to Data 8: *Foundations of Data Science*!  You can't learn technical subjects without hands-on practice, so labs are an important part of the course.\n",
+    "Welcome to COMSC-156: *Introduction to Data Science*!  You can't learn technical subjects without hands-on practice, so labs are an important part of the course.\n",
     "\n",
     "Collaborating on labs is more than okay -- it's encouraged! You should rarely remain stuck for more than a few minutes on questions in labs, so ask an instructor or classmate for help. (Explaining things is beneficial, too -- the best way to solidify your knowledge of a subject is to explain it.) Please don't just share answers, though.\n",
     "\n",
@@ -61,12 +61,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cell-lab01-3",
+   "id": "82dd9479",
    "metadata": {
     "deletable": false
    },
    "source": [
-    "**Question 1.1.1.** This paragraph is in its own text cell.  Try editing it so that this sentence is the last sentence in the paragraph, and then click the \"run cell\" ▶| button or hold down `shift` + `return`.  This sentence, for example, should be deleted.  So should this one."
+    "**Question 1.1.1.** This paragraph is in its own text cell.  Try editing it so that this sentence is the last sentence in the paragraph"
    ]
   },
   {
@@ -128,6 +128,7 @@
    "outputs": [],
    "source": [
     "print(\"First this line is printed,\")\n",
+    "\n",
     "print(\"and then this one.\")"
    ]
   },
@@ -142,7 +143,7 @@
     "    then the whole 🌏,\n",
     "    and then this one.\n",
     "\n",
-    "*Hint:* If you're stuck on the Earth symbol for more than a few minutes, try talking to a neighbor or a staff member. That's a good idea for any lab problem."
+    "*Hint:* If you're stuck on the Earth symbol for more than a few minutes, try talking to your peer and a classmate, or the professor. That's a good idea for any lab problem."
    ]
   },
   {
@@ -386,7 +387,7 @@
    },
    "outputs": [],
    "source": [
-    "..."
+    "5*(3+10/11)-(50+1/3)+2**(0.5*22)-7/33+5"
    ]
   },
   {
@@ -571,7 +572,7 @@
     "# so that it computes the number of seconds in a decade \n",
     "# and assigns that number the name, seconds_in_a_decade.\n",
     "\n",
-    "seconds_in_a_decade = ...\n",
+    "    seconds_in_a_decade = (365*10+2)*(24*60*60)\n",
     "\n",
     "# We've put this line in this cell \n",
     "# so that it will print the value you've given to seconds_in_a_decade when you run it.  \n",
@@ -693,11 +694,11 @@
    "source": [
     "# t, the duration of the fall in the experiment, in seconds.\n",
     "# Fill this in.\n",
-    "time = ...\n",
+    "time = 1.2\n",
     "\n",
     "# The estimated distance the hammer actually fell, in meters.\n",
     "# Fill this in.\n",
-    "estimated_distance_m = ..."
+    "estimated_distance_m = 1.13"
    ]
   },
   {
@@ -756,7 +757,7 @@
     "# The text above describes the formula\n",
     "# for this distance given by Newton's law.\n",
     "# **YOU FILL THIS PART IN.**\n",
-    "predicted_distance_m = ...\n",
+    "predicted_distance_m = 0.5*gravity_constant*(1.2**2)*(moon_mass_kg)/(moon_radius_m**2)\n",
     "\n",
     "# Here we've computed the difference \n",
     "# between the predicted fall distance and the distance we actually measured.\n",
@@ -844,7 +845,7 @@
     "num_streets_away = abs(42-34)\n",
     "\n",
     "# Compute the number of avenues away in a similar way:\n",
-    "num_avenues_away = ...\n",
+    "num_avenues_away = abs(7-10)\n",
     "\n",
     "street_length_m = 80\n",
     "avenue_length_m = 274\n",
@@ -967,7 +968,7 @@
     "# Replace the ... with an expression \n",
     "# to compute the absolute value \n",
     "# of the difference between Genghis's length (16.7 in) and the average cat length.\n",
-    "genghis_distance_from_average_in = ...\n",
+    "genghis_distance_from_average_in = abs(16.7 - 18.2)\n",
     "\n",
     "# Again, we've written this here \n",
     "# so that the distance you compute will get printed \n",
@@ -1083,7 +1084,8 @@
     "# If you're stuck, try computing the value for each step of the process \n",
     "# (like the difference between Hummus's length and Gatkes's length) \n",
     "# on a separate line and giving it a name (like hummus_gatkes_length_diff)\n",
-    "min_length_difference = ..."
+    "min_length_difference = min(abs(hummus - gatkes), abs(hummus - zeepty), abs(gatkes - zeepty))\n",
+    "round(min_length_difference, 5)"
    ]
   },
   {
@@ -1104,13 +1106,13 @@
    "id": "cell-lab01-80",
    "metadata": {},
    "source": [
-    "You're done with Lab 1! \n",
+    "You're done with Lab Exercise1! \n",
     "\n",
     "**Important submission steps:** \n",
     "1. Run the tests and verify that they all pass.\n",
     "2. Choose **Save Notebook** from the **File** menu, then **run the final cell**. \n",
-    "3. Click the link to download the zip file.\n",
-    "4. Then submit the zip file to the corresponding assignment according to your instructor's directions. \n",
+    "3. Choose **PDF via LaTeX(.pdf)** at **Download as** from the **File** menu. \n",
+    "4. Then submit the PDF file to the corresponding assignment according to your instructor's directions. \n",
     "\n",
     "**It is your responsibility to make sure your work is saved before running the last cell.**\n",
     "\n",
@@ -1118,9 +1120,9 @@
     "\n",
     "\n",
     "\n",
-    "Harley wanted to congratulate you and welcome you to Data 8!\n",
+    "Costa wanted to congratulate you and welcome you to \"Introduction to Data Science\"!\n",
     "\n",
-    "<img src=\"harley.png\" alt=\"drawing\" width=\"300\"/>\n"
+    "<img src=\"costa.png\" alt=\"drawing\" width=\"300\"/>\n"
    ]
   },
   {
@@ -1161,7 +1163,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1175,7 +1177,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.10.11"
   },
   "otter": {
    "OK_FORMAT": true,
