--- a/lab/lab01/lab01.ipynb
+++ b/lab/lab01/lab01.ipynb
@@ -387,7 +387,7 @@
    },
    "outputs": [],
    "source": [
-    "5*(3+10/11)-(50+1/3)+2**(0.5*22)-7/33+5"
+    "..."
    ]
   },
   {
@@ -572,7 +572,7 @@
     "# so that it computes the number of seconds in a decade \n",
     "# and assigns that number the name, seconds_in_a_decade.\n",
     "\n",
-    "    seconds_in_a_decade = (365*10+2)*(24*60*60)\n",
+    "    seconds_in_a_decade = ...\n",
     "\n",
     "# We've put this line in this cell \n",
     "# so that it will print the value you've given to seconds_in_a_decade when you run it.  \n",
@@ -694,11 +694,11 @@
    "source": [
     "# t, the duration of the fall in the experiment, in seconds.\n",
     "# Fill this in.\n",
-    "time = 1.2\n",
+    "time = ...\n",
     "\n",
     "# The estimated distance the hammer actually fell, in meters.\n",
     "# Fill this in.\n",
-    "estimated_distance_m = 1.13"
+    "estimated_distance_m = ..."
    ]
   },
   {
@@ -757,7 +757,7 @@
     "# The text above describes the formula\n",
     "# for this distance given by Newton's law.\n",
     "# **YOU FILL THIS PART IN.**\n",
-    "predicted_distance_m = 0.5*gravity_constant*(1.2**2)*(moon_mass_kg)/(moon_radius_m**2)\n",
+    "predicted_distance_m = ...\n",
     "\n",
     "# Here we've computed the difference \n",
     "# between the predicted fall distance and the distance we actually measured.\n",
@@ -845,7 +845,7 @@
     "num_streets_away = abs(42-34)\n",
     "\n",
     "# Compute the number of avenues away in a similar way:\n",
-    "num_avenues_away = abs(7-10)\n",
+    "num_avenues_away = ...\n",
     "\n",
     "street_length_m = 80\n",
     "avenue_length_m = 274\n",
@@ -968,7 +968,7 @@
     "# Replace the ... with an expression \n",
     "# to compute the absolute value \n",
     "# of the difference between Genghis's length (16.7 in) and the average cat length.\n",
-    "genghis_distance_from_average_in = abs(16.7 - 18.2)\n",
+    "genghis_distance_from_average_in = ...\n",
     "\n",
     "# Again, we've written this here \n",
     "# so that the distance you compute will get printed \n",
@@ -1084,7 +1084,7 @@
     "# If you're stuck, try computing the value for each step of the process \n",
     "# (like the difference between Hummus's length and Gatkes's length) \n",
     "# on a separate line and giving it a name (like hummus_gatkes_length_diff)\n",
-    "min_length_difference = min(abs(hummus - gatkes), abs(hummus - zeepty), abs(gatkes - zeepty))\n",
+    "min_length_difference = ...\n",
     "round(min_length_difference, 5)"
    ]
   },
