--- a/hw/hw01/hw01.ipynb
+++ b/hw/hw01/hw01.ipynb
@@ -80,7 +80,7 @@
    "id": "cell-hw01-5",
    "metadata": {},
    "source": [
-    "_Type your answer here, replacing this text._"
+    "It is about 3-month (1/4 of a year) between Memorial Day to Labor Day. According to FBI statistics, about 25% home burglaries happened in that 3-month. The data in the ad didn't support the claim that burglars are more likely to go to work during regular vacation."
    ]
   },
   {
@@ -162,7 +162,7 @@
    },
    "outputs": [],
    "source": [
-    "characters_q1 = ..."
+    "characters_q1 = 2"
    ]
   },
   {
@@ -210,7 +210,7 @@
    },
    "outputs": [],
    "source": [
-    "characters_q2 = ..."
+    "characters_q2 = 1"
    ]
   },
   {
@@ -300,7 +300,7 @@
    },
    "outputs": [],
    "source": [
-    "names_q1 = ..."
+    "names_q1 = 2"
    ]
   },
   {
@@ -367,7 +367,7 @@
    },
    "outputs": [],
    "source": [
-    "names_q2 = ..."
+    "names_q2 = 4"
    ]
   },
   {
@@ -435,7 +435,7 @@
    },
    "outputs": [],
    "source": [
-    "names_q3 = ..."
+    "names_q3 = 2"
    ]
   },
   {
@@ -497,7 +497,7 @@
    },
    "outputs": [],
    "source": [
-    "biggest_change = ...\n",
+    "biggest_change = max(abs(17-28), abs(49-67), abs(113-56))\n",
     "biggest_change"
    ]
   },
@@ -543,7 +543,7 @@
    },
    "outputs": [],
    "source": [
-    "smallest_change_major = ...\n",
+    "smallest_change_major = 1\n",
     "smallest_change_major"
    ]
   },
@@ -584,9 +584,9 @@
    },
    "outputs": [],
    "source": [
-    "gws_relative_change = (abs(...) / 17) * 100\n",
-    "linguistics_relative_change = ...\n",
-    "rhetoric_relative_change = ...\n",
+    "gws_relative_change = (abs(17-28) / 17) * 100\n",
+    "linguistics_relative_change = (abs(49-67) / 49) * 100\n",
+    "rhetoric_relative_change = (abs(113-56) / 113) * 100\n",
     "gws_relative_change, linguistics_relative_change, rhetoric_relative_change"
    ]
   },
@@ -630,7 +630,7 @@
    },
    "outputs": [],
    "source": [
-    "biggest_rel_change_major = ...\n",
+    "biggest_rel_change_major = 1\n",
     "biggest_rel_change_major"
    ]
   },
@@ -681,7 +681,7 @@
    "id": "cell-hw01-51",
    "metadata": {},
    "source": [
-    "_Type your answer here, replacing this text._"
+    "It is observational because we don't know the background and living environment of those outpatients"
    ]
   },
   {
@@ -706,7 +706,7 @@
    "id": "cell-hw01-53",
    "metadata": {},
    "source": [
-    "_Type your answer here, replacing this text._"
+    "We can see the light during the sleep did somehow affect the percentage of myopic after the babies grow up. However, strongly is a good word to describe. Sleeping lights has an association with the myopia."
    ]
   },
   {
@@ -729,7 +729,7 @@
    "id": "cell-hw01-55",
    "metadata": {},
    "source": [
-    "_Type your answer here, replacing this text._"
+    "Same as Q. 2, We did see the light during the sleep did somehow affect the percentage of myopic after the babies grow up. Sleeping lights has an association with the myopia but not \"cause\" the nearsightedness"
    ]
   },
   {
@@ -754,7 +754,7 @@
    "id": "cell-hw01-57",
    "metadata": {},
    "source": [
-    "_Type your answer here, replacing this text._"
+    "I don't understand the question well. From the study, we may need to check the parents' vision and see the relationship with the vision of children"
    ]
   },
   {
@@ -801,7 +801,7 @@
    },
    "outputs": [],
    "source": [
-    "survivor_answer = ..."
+    "survivor_answer = 1"
    ]
   },
   {
@@ -835,8 +835,8 @@
     "**Important submission steps:** \n",
     "1. Run the tests and verify that they all pass.\n",
     "2. Choose **Save Notebook** from the **File** menu, then **run the final cell**. \n",
-    "3. Click the link to download the zip file.\n",
-    "4. Then submit the zip file to the corresponding assignment according to your instructor's directions. \n",
+    "3. Choose **PDF via LaTeX(.pdf)** at **Download as** from the **File** menu. \n",
+    "4. Then submit the PDF file to the corresponding assignment according to your instructor's directions. \n",
     "\n",
     "**It is your responsibility to make sure your work is saved before running the last cell.**\n"
    ]
@@ -893,7 +893,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.9"
+   "version": "3.10.11"
   },
   "otter": {
    "OK_FORMAT": true,
