--- a/hw/hw01/hw01.ipynb
+++ b/hw/hw01/hw01.ipynb
@@ -80,7 +80,7 @@
    "id": "cell-hw01-5",
    "metadata": {},
    "source": [
-    "It is about 3-month (1/4 of a year) between Memorial Day to Labor Day. According to FBI statistics, about 25% home burglaries happened in that 3-month. The data in the ad didn't support the claim that burglars are more likely to go to work during regular vacation."
+    "~Replace with your answer here"
    ]
   },
   {
@@ -162,7 +162,7 @@
    },
    "outputs": [],
    "source": [
-    "characters_q1 = 2"
+    "characters_q1 = ..."
    ]
   },
   {
@@ -210,7 +210,7 @@
    },
    "outputs": [],
    "source": [
-    "characters_q2 = 1"
+    "characters_q2 = ..."
    ]
   },
   {
@@ -300,7 +300,7 @@
    },
    "outputs": [],
    "source": [
-    "names_q1 = 2"
+    "names_q1 = ..."
    ]
   },
   {
@@ -367,7 +367,7 @@
    },
    "outputs": [],
    "source": [
-    "names_q2 = 4"
+    "names_q2 = ..."
    ]
   },
   {
@@ -435,7 +435,7 @@
    },
    "outputs": [],
    "source": [
-    "names_q3 = 2"
+    "names_q3 = ..."
    ]
   },
   {
@@ -497,7 +497,7 @@
    },
    "outputs": [],
    "source": [
-    "biggest_change = max(abs(17-28), abs(49-67), abs(113-56))\n",
+    "biggest_change = ...\n",
     "biggest_change"
    ]
   },
@@ -543,7 +543,7 @@
    },
    "outputs": [],
    "source": [
-    "smallest_change_major = 1\n",
+    "smallest_change_major = ...\n",
     "smallest_change_major"
    ]
   },
@@ -584,9 +584,9 @@
    },
    "outputs": [],
    "source": [
-    "gws_relative_change = (abs(17-28) / 17) * 100\n",
-    "linguistics_relative_change = (abs(49-67) / 49) * 100\n",
-    "rhetoric_relative_change = (abs(113-56) / 113) * 100\n",
+    "gws_relative_change = (abs(...) / 17) * 100\n",
+    "linguistics_relative_change = \n",
+    "rhetoric_relative_change = \n",
     "gws_relative_change, linguistics_relative_change, rhetoric_relative_change"
    ]
   },
@@ -630,7 +630,7 @@
    },
    "outputs": [],
    "source": [
-    "biggest_rel_change_major = 1\n",
+    "biggest_rel_change_major = ...\n",
     "biggest_rel_change_major"
    ]
   },
@@ -681,7 +681,7 @@
    "id": "cell-hw01-51",
    "metadata": {},
    "source": [
-    "It is observational because we don't know the background and living environment of those outpatients"
+    "~Replace with your answer here"
    ]
   },
   {
@@ -706,7 +706,7 @@
    "id": "cell-hw01-53",
    "metadata": {},
    "source": [
-    "We can see the light during the sleep did somehow affect the percentage of myopic after the babies grow up. However, strongly is a good word to describe. Sleeping lights has an association with the myopia."
+    "~Replace with your answer here"
    ]
   },
   {
@@ -729,7 +729,7 @@
    "id": "cell-hw01-55",
    "metadata": {},
    "source": [
-    "Same as Q. 2, We did see the light during the sleep did somehow affect the percentage of myopic after the babies grow up. Sleeping lights has an association with the myopia but not \"cause\" the nearsightedness"
+    "~Replace with your answer here"
    ]
   },
   {
@@ -754,7 +754,7 @@
    "id": "cell-hw01-57",
    "metadata": {},
    "source": [
-    "I don't understand the question well. From the study, we may need to check the parents' vision and see the relationship with the vision of children"
+    "~Replace with your answer here"
    ]
   },
   {
@@ -793,7 +793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "id": "cell-hw01-60",
    "metadata": {
     "deletable": false,
@@ -801,7 +801,7 @@
    },
    "outputs": [],
    "source": [
-    "survivor_answer = 1"
+    "survivor_answer = ..."
    ]
   },
   {
