--- a/lab/lab03/lab03.ipynb
+++ b/lab/lab03/lab03.ipynb
@@ -28,7 +28,7 @@
     "In this lab, you'll first see how to represent and manipulate another fundamental type of data: text.  A piece of text is called a *string* in Python. You'll also see how to work with *arrays* of data. An array could contain all the numbers between 0 and 100 or all the words in the chapter of a book. Lastly, you'll create tables and practice analyzing them with your knowledge of table operations. The [Python Reference](http://data8.org/sp22/python-reference.html) has information that will be useful for this lab.\n",
     "\n",
     "\n",
-    "**Submission**: Once you’re finished, run all cells besides the last one, select File > Save Notebook, and then execute the final cell. Then submit the downloaded zip file, that includes your notebook,  according to your instructor's directions."
+    "**Submission**: Once you’re finished, run all cells besides the last one, select File > Save Notebook, and then execute the final cell. Then submit the downloaded pdf file, that includes your notebook,  according to your instructor's directions."
    ]
   },
   {
@@ -1578,8 +1578,8 @@
     "**Important submission steps:** \n",
     "1. Run the tests and verify that they all pass.\n",
     "2. Choose **Save Notebook** from the **File** menu, then **run the final cell**. \n",
-    "3. Click the link to download the zip file.\n",
-    "4. Then submit the zip file to the corresponding assignment according to your instructor's directions. \n",
+    "3. Choose **PDF via LaTeX(.pdf)** at **Download as** from the **File** menu. \n",
+    "4. Then submit the PDF file to the corresponding assignment according to your instructor's directions. \n",
     "\n",
     "**It is your responsibility to make sure your work is saved before running the last cell.**"
    ]
@@ -1636,7 +1636,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.9"
+   "version": "3.10.11"
   },
   "otter": {
    "OK_FORMAT": true,
