--- a/lab/lab04/lab04.ipynb
+++ b/lab/lab04/lab04.ipynb
@@ -36,7 +36,7 @@
     "* [Visualizations](https://inferentialthinking.com/chapters/07/Visualization.html)\n",
     "* [Python Reference](http://data8.org/sp22/python-reference.html)\n",
     "\n",
-    "**Submission**: Once you’re finished, run all cells besides the last one, select File > Save Notebook, and then execute the final cell. Then submit the downloaded zip file, that includes your notebook,  according to your instructor's directions."
+    "**Submission**: Once you’re finished, run all cells besides the last one, select File > Save Notebook, and then execute the final cell. Then submit the downloaded pdf file, that includes your notebook,  according to your instructor's directions."
    ]
   },
   {
@@ -1325,8 +1325,9 @@
     "**Important submission steps:** \n",
     "1. Run the tests and verify that they all pass.\n",
     "2. Choose **Save Notebook** from the **File** menu, then **run the final cell**. \n",
-    "3. Click the link to download the zip file.\n",
-    "4. Then submit the zip file to the corresponding assignment according to your instructor's directions. \n",
+    "3. Choose **PDF via LaTeX(.pdf)** at **Download as** from the **File** menu. \n",
+    "4. Then submit the PDF file to the corresponding assignment according to your instructor's directions. \n",
+    "\n",
     "\n",
     "**It is your responsibility to make sure your work is saved before running the last cell.**"
    ]
@@ -1383,7 +1384,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.10.11"
   },
   "otter": {
    "OK_FORMAT": true,
