--- a/hw/hw05/hw05.ipynb
+++ b/hw/hw05/hw05.ipynb
@@ -482,8 +482,8 @@
     "**Important submission steps:** \n",
     "1. Run the tests and verify that they all pass.\n",
     "2. Choose **Save Notebook** from the **File** menu, then **run the final cell**. \n",
-    "3. Click the link to download the zip file.\n",
-    "4. Then submit the zip file to the corresponding assignment according to your instructor's directions. \n",
+    "3. Choose **PDF via LaTeX(.pdf)** at **Download as** from the **File** menu. \n",
+    "4. Then submit the PDF file to the corresponding assignment according to your instructor's directions. \n",
     "\n",
     "**It is your responsibility to make sure your work is saved before running the last cell.** "
    ]
@@ -540,7 +540,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.9"
+   "version": "3.10.11"
   },
   "otter": {
    "OK_FORMAT": true,
